--- a/index.css
+++ b/index.css
@@ -9,12 +9,20 @@
   background: url("img/header.jpg") top center no-repeat fixed;
   width: 100%;
   height: 100%;
+  background-size: cover;
 }
-.imgContainer {
-  width: 100%;
-  height: 100%;
+.container{
+  margin-top: 2.5vh;
 }
-.imgAtt {
-  width: 100%;
-  vertical-align: middle;
+table{
+  background-color: white;
+  color: black;
+  font-weight: bold;
+  border: 2px solid black;
+}
+td{
+  border: 2px solid black;
+}
+.mb-8{
+text-align: justify;
 }
